--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-slate-900">
+  <body class="bg-gray-50 text-slate-900 w-[600px] h-[600px] overflow-auto">
     <div id="root"></div>
   </body>
 </html>
