--- a/index.html
+++ b/index.html
@@ -5,30 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chase App Status Viewer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              chase: {
-                blue: '#117aca',
-                dark: '#1d252c',
-                navy: '#0b2e4f',
-              }
-            }
-          }
-        }
-      }
-    </script>
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.559.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.1/",
     "react/": "https://esm.sh/react@^19.2.1/",
     "react": "https://esm.sh/react@^19.2.1",
+    "lucide-react": "https://esm.sh/lucide-react@^0.559.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.1/",
     "vite": "https://esm.sh/vite@^7.2.7"
   }
 }
@@ -36,5 +20,6 @@
 </head>
   <body class="bg-gray-50 text-slate-900 w-[600px] h-[600px] overflow-auto">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
