--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-slate-900 w-[600px] h-[600px] overflow-auto">
+  <!-- Reduced width to 420px and managed height to be compact -->
+  <body class="bg-gray-50 text-slate-900 w-[420px] h-[580px] overflow-y-auto overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
