feat: Update app version and adjust UI for compactness
Increases the application version to v1.0.2.
Adjusts the UI by reducing the width and height of the main body element and compacting header and footer elements for a more streamlined appearance.
Updates the version number displayed in the header and README.md.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 }
 </script>
 </head>
-  <!-- Reduced width to 420px and managed height to be compact -->
-  <body class="bg-gray-50 text-slate-900 w-[420px] h-[580px] overflow-y-auto overflow-x-hidden">
+  <!-- Even more compact: 380px width -->
+  <body class="bg-gray-50 text-slate-900 w-[380px] h-[550px] overflow-y-auto overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
